# ConsumerBench

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  benchmark_v1.py  benchmark_v2.py  globals.py  pyproject.toml  requirements.txt  setup.py  workflow.py
applications/: README.md  application.py
configs/: concurrent_run_config_all_gpu.txt  concurrent_run_config_all_gpu_cpu.txt  concurrent_run_config_all_gpu_mps.txt  concurrent_run_config_all_gpu_quant_llama.txt  concurrent_run_config_all_gpu_qwen3b.txt  concurrent_run_config_chatbot_deep_research.txt  concurrent_run_config_chatbot_deep_research_quant_llama.txt  concurrent_run_config_chatbot_deep_research_qwen3b.txt  concurrent_run_config_file.txt  concurrent_run_config_file_chatbot.txt  concurrent_run_config_file_chatbot_cpu.txt  concurrent_run_config_file_chatbot_cpu_small.txt  concurrent_run_config_file_chatbot_cpu_small_llama_2_13b.txt  concurrent_run_config_file_chatbot_cpu_small_llama_2_7b.txt  concurrent_run_config_file_chatbot_cpu_small_quant_llama.txt  concurrent_run_config_file_chatbot_cpu_small_qwen3b.txt  concurrent_run_config_file_chatbot_small.txt  concurrent_run_config_file_chatbot_small_quant_llama.txt  concurrent_run_config_file_chatbot_small_qwen3b.txt  concurrent_run_config_file_deep_research_small_qwen3b.txt  concurrent_run_config_file_imagegen.txt  concurrent_run_config_file_imagegen_cpu.txt  concurrent_run_config_file_imagegen_large.txt  concurrent_run_config_file_live_captions.txt  concurrent_run_config_file_live_captions_chatbot.txt  concurrent_run_config_file_live_captions_cpu.txt  concurrent_run_config_file_live_captions_imagegen.txt  sleep_test.yml  test_complex.yml  workflow_chatbot.yml  workflow_chatbot_cpu.yml  workflow_chatbot_deep_research.yml  workflow_chatbot_imagegen.yml  workflow_chatbot_imagegen_live_captions.yml  workflow_chatbot_imagegen_live_captions_mps.yml  workflow_chatbot_imagegen_mps.yml  workflow_chatbot_live_captions.yml  workflow_content_creation.yml  workflow_content_creation_mps.yml  workflow_deep_research.yml  (+15 more)
example_workflow/: cleanup.sh  gpt4all.sh  livecaptions_client.sh  llamacpp_server.sh  llamacpp_server_cpu.sh  share4video.sh  textgen_server.sh  whisper_online_server.sh
inference_backends/: Llamacpp.py  llamacpp_server.sh
monitors/: README.md  end_monitoring.sh  get_cpu_usage.sh  jetson_logger.py  memory_util.py  pcm_memory.sh  record_gpu_mem_compute.sh  record_power_usage.py
scripts/: benchmark_accuracy.py  benchmark_accuracy.sh  calculate_dataset_length.py  combined_deep_research.sh  combined_script.sh  combined_script_chatbot_models.sh  config_to_json.py  dcgm_plotter_gpu_compute.py  dcgm_plotter_gpu_mem.py  get_memory_bandwidth.sh  overall_benchmark_output.py  parse-results-deepresearch.py  (+13 more)
(+455 files in other folders)
